--- a/css/infos.css
+++ b/css/infos.css
@@ -14,42 +14,31 @@ ul.toggle_display {
 ul.toggle_display li {
 	padding:0;
 }
-#tabs ul#headers li, #tabs ul#headers li h2, #stats_lines li{
+ #tabs ul#headers li h2, #stats_lines li{
 	display: inline;
-	margin-right: 10px;
+	margin:0;
 }
 #tabs ul#headers {
-	border-bottom:1px solid #E3F3FF;
-	padding:12px 5px 3px 5px;
+	border-bottom:0;
+	padding:0;
 	float:left;
+	width:100%;
+	background:#393b3c;
 }
+#tabs ul li{ border-left:2px solid #fff; float:left; margin-right:2px;}
+#tabs ul li:first-child{ border-left:0; margin-left:2px;}
+#tabs ul li a{ float:left;color:#fff; font-size:14px; font-family:Arial, Helvetica, sans-serif; text-decoration:none; padding:10px 20px; border-top:2px solid #393b3c;}
+#tabs ul li a h2{ font-size:14px; font-weight:normal; display:block; margin:0; padding:0;}
+
+
+#tabs ul li a:hover{ background:#000;}
+#tabs ul li.selected a{ color:#666;  background:#f6f6f6;}
+
+
 .wrap_unfloat {
 	overflow:hidden;
 }
 
-#tabs ul#headers li a {
-	color:#595441;
-	border:1px solid #C7E7FF;
-	-moz-border-radius:10px 10px 0 0;
-	-webkit-border-radius:10px 10px 0 0;
-	border-radius:10px 10px 0 0;
-	padding:10px 5px 5px 15px;
-	background:#E3F3FF;
-}
-
-#tabs ul#headers li a:hover {
-	text-decoration:none;
-	background:#88C0EB;
-}
-
-#tabs ul#headers li a.selected {
-	border-bottom:2px solid #fff;
-	background:#fff;
-}
-
-#tabs ul#headers li a.selected:hover {
-	background:#fff;
-}
 
 #stats_lines li a {
 	-moz-border-radius:10px 10px 0 0;
