--- a/css/adminstyle.css
+++ b/css/adminstyle.css
@@ -15,8 +15,7 @@ display:none;
 }
 div, p, td {
 font-family:Arial, Helvetica, sans-serif;
-/*font-size:13px;*/
-font-size:12px;
+font-size:13px;
 }
 
 a {text-decoration:none;}
@@ -84,9 +83,9 @@ background:#343637;
 }
 input.primary {
 border:1px solid #0d5f79 !important;
-background:#337291 !important; padding:7px !important;
+background:#337291 !important; padding:5px 7px !important;
 }
-#add-button {border-bottom:1px solid #7096a9; background:#343637; box-shadow:none; cursor:pointer;}
+ #add-button {border-bottom:1px solid #7096a9; background:#343637; box-shadow:none; cursor:pointer; float: right;}
 
 
 input.text:focus, textarea:focus {
@@ -94,7 +93,8 @@ border:2px solid #2A85B3;
 margin:0px;
 }
 tr.edit-row td {
-background:#e3f3ff !important;
+background:#337291 !important;
+color: #fff !important;
 }
 #new_url {text-align:center; border:1px solid #0e607a; clear:both; background:url(../images/titlebg.jpg) repeat-x 0 0; padding:2px; color:#fff;}
 #new_url_form {padding:3px;}
@@ -145,6 +145,7 @@ display:block;
 float:left;
 text-indent:-9999px;
 outline:0px;
+padding: 0;
 }
 td.actions .button:active {
 border:1px solid #000;
@@ -488,8 +489,8 @@ border-radius: 5px;
 
 .text-right { text-align:right;}
 
-input[type="text"] {border:1px solid #cccccc; padding:10px;}
-.btn, .button {background:#337291; border:1px solid #1e4456; color:#fff; padding:10px; cursor:pointer;}
+input[type="text"] {border:1px solid #cccccc; padding:8px 10px;}
+.btn, .button {background:#337291; border:1px solid #1e4456; color:#fff; padding:5px 10px; cursor:pointer;}
 
 @-moz-document url-prefix() { 
  .btn {padding:9px;}
@@ -512,7 +513,7 @@ input[type="text"] {border:1px solid #cccccc; padding:10px;}
 
 #login {
     margin: 100px auto 0;
-    width: 300px;
+   /* width: 300px;*/
 }
 #login p {
     font-weight: bold;
@@ -533,3 +534,6 @@ input[type="text"] {border:1px solid #cccccc; padding:10px;}
 
 
 
+#main_table_filter { margin-top: 5px;}
+#main_table_filter input{ border: 1px solid #888888;
+    padding: 2px 10px;}
