--- a/css/style.css
+++ b/css/style.css
@@ -90,3 +90,6 @@ input[type="text"] {border:1px solid #cccccc; padding:10px;}
     padding: 10px; width:92%;}
 
 .login{ background: url("../images/bgTexture.png") repeat scroll 0 0 rgba(0, 0, 0, 0);}
+
+.margin10_R {margin-right: 10px;}
+
