--- a/css/adminstyle.css
+++ b/css/adminstyle.css
@@ -537,3 +537,8 @@ input[type="text"] {border:1px solid #cccccc; padding:8px 10px;}
 #main_table_filter { margin-top: 5px;}
 #main_table_filter input{ border: 1px solid #888888;
     padding: 2px 10px;}
+
+
+.margin10_R {margin-right: 10px;}
+
+
