--- a/css/style.css
+++ b/css/style.css
@@ -92,4 +92,4 @@ input[type="text"] {border:1px solid #cccccc; padding:10px;}
 .login{ background: url("../images/bgTexture.png") repeat scroll 0 0 rgba(0, 0, 0, 0);}
 
 .margin10_R {margin-right: 10px;}
-
+.lable {min-width:20%; float: left; margin-top: 5px; }
