--- a/css/adminstyle.css
+++ b/css/adminstyle.css
@@ -16,6 +16,7 @@ display:none;
 div, p, td {
 font-family:Arial, Helvetica, sans-serif;
 font-size:13px;
+margin-top: 5px;
 }
 
 a {text-decoration:none;}
@@ -85,7 +86,7 @@ input.primary {
 border:1px solid #0d5f79 !important;
 background:#337291 !important; padding:5px 7px !important;
 }
- #add-button {border-bottom:1px solid #7096a9; background:#343637; box-shadow:none; cursor:pointer; float: right;}
+ #add-button {border-bottom:1px solid #7096a9; background:#343637; box-shadow:none; cursor:pointer; /*float: right;*/}
 
 
 input.text:focus, textarea:focus {
@@ -118,7 +119,7 @@ color:#000;
 }
 td.url small a:hover{ color:#333;}
 body.desktop td.actions input, body.desktop td.actions a {
-visibility:hidden;
+visibility:visible;
 }
 td.actions input.disabled, td.actions input.loading {
 visibility:visible;
@@ -146,6 +147,9 @@ float:left;
 text-indent:-9999px;
 outline:0px;
 padding: 0;
+}
+td.actions {
+width:200px;
 }
 td.actions .button:active {
 border:1px solid #000;
@@ -470,8 +474,10 @@ border-radius: 5px;
 .contentarea:after, .contentarea:before { display:table; content:"";}
 .contentarea:after {clear:both}
 
-.header a {color:#d4d7da; text-decoration:none; padding:0 5px; margin:5px; display:inline-block;}
-
+.header a {color:#d4d7da; text-decoration:none; padding:2px 5px 5px; margin:0 5px; display:inline-block;height: 25px;
+    line-height: 25px;}
+.header a:hover{ background-color: #000; }
+.header .h-logo{ padding: 0; margin: 0;}
 .menu {float:right; margin-top:5px; color:#fff;}
 
 .ltpannel {background:url(../images/bgTexture.png) repeat 0 0; float:left; width:70%; display:table;}
@@ -489,7 +495,7 @@ border-radius: 5px;
 
 .text-right { text-align:right;}
 
-input[type="text"] {border:1px solid #cccccc; padding:8px 10px;}
+input[type="text"] {border:1px solid #cccccc; padding:5px 12px;}
 .btn, .button {background:#337291; border:1px solid #1e4456; color:#fff; padding:5px 10px; cursor:pointer;}
 
 @-moz-document url-prefix() { 
@@ -537,3 +543,61 @@ input[type="text"] {border:1px solid #cccccc; padding:8px 10px;}
 #main_table_filter { margin-top: 5px;}
 #main_table_filter input{ border: 1px solid #888888;
     padding: 2px 10px;}
+
+
+
+.title {border:1px solid #0e607a; clear:both; background:url(../images/titlebg.jpg) repeat-x 0 0; padding:5px 10px; color:#fff; margin:20px 0 10px 0;}
+#main_table tbody tr:nth-child(odd) td {background:#EEF2F5;}
+/*css for dropdowon menu*/
+.dropDown, .moremenu{ display: inline; position: relative;}
+
+.ddMenu{position:absolute; left: 0; list-style-type: none;}
+.ddMenu{z-index:9}
+.ddMenu li{border-bottom:1px solid #666; border-top:1px solid #292929; float:none; padding:2px 0}
+.ddMenu li:last-child{border-bottom:none}
+.lyGrey {
+    background-color: #393939;
+    min-width: 130px;
+    box-shadow: 0 0 6px #222222;
+}
+.ddMenu li {
+    border-bottom: 1px solid #666666;
+    border-top: 1px solid #292929;
+    float: none;
+    padding: 2px 0;
+}
+
+.ddMenu li a {
+    color: #FFFFFF;
+    display: block;
+    height: 25px;
+    line-height: 25px;
+    margin: 0;
+    padding: 0 10px;
+}
+.ddMenu a:hover, .ddMenu a.selected, .ddMenu a.currentPage, .dropDown:hover {
+    background-color: #000000;
+    text-decoration: none;
+}
+
+.header .dropDown {
+    padding-right: 25px;
+    height: 25px;
+    line-height: 25px;
+    margin: 0;
+    outline: none;
+
+}
+
+.sprite {
+    background-image: url("../images/sprite.png");
+    background-repeat: no-repeat;
+}
+.dropDown span {
+    background-position: -43px 1px;
+    height: 25px;
+    position: absolute;
+    right: 7px;
+    top: 1px;
+    width: 10px;
+}
