--- a/css/style.css
+++ b/css/style.css
@@ -90,3 +90,61 @@ input[type="text"] {border:1px solid #cccccc; padding:10px;}
     padding: 10px; width:92%;}
 
 .login{ background: url("../images/bgTexture.png") repeat scroll 0 0 rgba(0, 0, 0, 0);}
+
+/*drop down menu css*/
+.header a {color:#d4d7da; text-decoration:none; padding:2px 5px 5px; margin:0 5px; display:inline-block;height: 25px;
+    line-height: 25px;}
+.header a:hover{ background-color: #000; }
+.header .h-logo{ padding: 0; margin: 0;}
+.dropDown, .moremenu{ display: inline; position: relative;}
+
+.ddMenu{position:absolute; left: 0; list-style-type: none;}
+.ddMenu{z-index:9}
+.ddMenu li{border-bottom:1px solid #666; border-top:1px solid #292929; float:none; padding:2px 0}
+.ddMenu li:last-child{border-bottom:none}
+.lyGrey {
+    background-color: #393939;
+    min-width: 130px;
+    box-shadow: 0 0 6px #222222;
+}
+.ddMenu li {
+    border-bottom: 1px solid #666666;
+    border-top: 1px solid #292929;
+    float: none;
+    padding: 2px 0;
+}
+
+.ddMenu li a {
+    color: #FFFFFF;
+    display: block;
+    height: 25px;
+    line-height: 25px;
+    margin: 0;
+    padding: 0 10px;
+}
+.ddMenu a:hover, .ddMenu a.selected, .ddMenu a.currentPage, .dropDown:hover {
+    background-color: #000000;
+    text-decoration: none;
+}
+
+.header .dropDown {
+    padding-right: 25px;
+    height: 25px;
+    line-height: 25px;
+    margin: 0;
+    outline: none;
+
+}
+
+.sprite {
+    background-image: url("../images/sprite.png");
+    background-repeat: no-repeat;
+}
+.dropDown span {
+    background-position: -43px 1px;
+    height: 25px;
+    position: absolute;
+    right: 7px;
+    top: 1px;
+    width: 10px;
+}
