--- a/css/adminstyle.css
+++ b/css/adminstyle.css
@@ -72,7 +72,7 @@ input, textarea {
 -webkit-border-radius:3px;
 border-radius:3px;
 }
-Input.text, select, textarea {font-family: 'Source Sans Pro', sans-serif; font-size:12px; color:#595441; border:1px solid #0470d6; padding:8px; margin:1px; background:#fff; border-radius:0;}
+Input.text, select, textarea {font-family: 'Source Sans Pro', sans-serif; font-size:12px; color:#595441; border:1px solid #0470d6; padding:8px; background:#fff; border-radius:0;}
 
 select {
 font-family: 'Source Sans Pro', sans-serif;
@@ -92,7 +92,6 @@ background:#337291 !important; padding:5px 7px !important;
 
 input.text:focus, textarea:focus {
 border:2px solid #2A85B3;
-margin:0px;
 }
 tr.edit-row td {
 background:#337291 !important;
@@ -495,7 +494,7 @@ border-radius: 5px;
 
 .text-right { text-align:right;}
 
-input[type="text"] {border:1px solid #cccccc; padding:5px 12px;}
+input[type="text"] {border:1px solid #cccccc; padding:6px;}
 .btn, .button {background:#337291; border:1px solid #1e4456; color:#fff; padding:5px 10px; cursor:pointer;}
 
 @-moz-document url-prefix() { 
@@ -618,3 +617,13 @@ input[type="text"] {border:1px solid #cccccc; padding:5px 12px;}
     top: 26px;
     left: auto;
 }
+
+.text {margin:0 0 10px 0;}
+
+
+#shareboxes{
+    padding:10px 0; width:auto; margin:10px auto;
+}
+.row {overflow: hidden;}
+.width10 {width: 10%; float: left;}
+.width90 {width:90%; float: left;}
