--- a/css/style.css
+++ b/css/style.css
@@ -7,25 +7,27 @@ body, html, .contentarea, .ltpannel{ height: 100%;}
 a {text-decoration: none;}
 body {padding:0; margin:0; font-family: 'Source Sans Pro', sans-serif; font-size:14px; background:#fff;}
 
-.success, .warning {padding:15px 0;}
+#shareboxes{padding:10px 0; width:70%; margin:10px auto;}
 
-.success span {
-background: #60DB69;
+.successtext span {
+background: #aea;
 font-weight: normal;
 
-color: #1B1414;
-padding:10px;
+color: #060;
+padding:6px 10px;
 border-radius: 5px;
 }
 
+.warning, .successtext {padding-top:10px;}
+
 .warning span {
-background: #DA002C;
-color: #FFF;
-padding: 10px;
+background: #fdd;
+color: #f00;
+padding:6px 10px;
 border-radius: 5px;
 font-weight: bold;
 font-family: 'Source Sans Pro', sans-serif;
-font-size: 16px;
+font-size:13px;
 }
 
 .contentarea {margin:0;}
@@ -56,7 +58,7 @@ font-size: 16px;
 
 .text-right { text-align:right;}
 
-input[type="text"] {border:1px solid #cccccc; padding:10px;}
+input[type="text"] {border:1px solid #cccccc; padding:6px;}
 .btn, .button {background:#337291; border:1px solid #1e4456; color:#fff; padding:10px; cursor:pointer;}
 
 @-moz-document url-prefix() { 
@@ -199,5 +201,10 @@ span#recaptcha_privacy {
 /* 22-04-2014 */
 
 input[type="password"] {border:1px solid #cccccc; padding:10px;}
+
+
+
+
+
 
 
