--- a/css/tablesorter.css
+++ b/css/tablesorter.css
@@ -242,28 +242,28 @@ input[type="button"], input[type="submit"] {border-bottom:1px solid #7096a9; bac
 
 
 /* 22-04-2014 */
-.error_message {color:red;}
+.error_message {color:red; font-size: 13px;}
 
 .signup {padding-bottom:180px;}
-.signup form {margin:10px auto; width:44%;}
+.signup form {margin:10px auto; width:65%;}
 
-.signup td {padding:3px; font-size: 14px;}
+.signup td {padding:5px 3px; font-size: 14px;}
 .add {background-color: #000; padding:10px 0; width:100%; line-height:0; position:fixed; bottom:38px; left: 0; text-align: center;}
 input[type="reset"],input[type="button"], input[type="submit"] {border-bottom:1px solid #7096a9; background:#343637; box-shadow:none; cursor:pointer; min-width: 80px; 
 	cursor:pointer;
-	border:1px solid #1e4456; color:#fff;
+	border:1px solid #1e4456; color:#fff; padding:6px;
 }
 
 .span5 form {width:55%;}
 
 
 @-moz-document url-prefix() { 
-input[type="reset"],input[type="button"], input[type="submit"] {padding:9px;}
+input[type="reset"],input[type="button"], input[type="submit"] {padding:5px;}
 
 }
 
 
-input[type="password"] {border:1px solid #cccccc; padding:10px;}
+input[type="password"] {border:1px solid #cccccc; padding:6px;}
 
 .title{
 background:#61acc5;
@@ -276,3 +276,32 @@ margin-bottom:10px;
 
 .login {width: auto !important; margin: 0 !important;}
 .thankyou {font-weight: bold; font-size: 15px; padding: 10px;}
+
+
+/**/
+
+.success {
+	background:#aea; 
+	padding:5px;
+	display:block; 
+	margin-bottom:5px; 
+	text-align: center;
+	color: #060;
+}
+.errormessage {
+	background:#fdd;
+	color: #f00;
+	padding:5px;
+	display:block; 
+	margin-bottom:5px; 
+	text-align: center;
+}
+.width50 {width: 50%;}
+
+.center {
+    text-align: center;
+}
+
+.userside form {width: 50%;}
+
+
