--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ input[type="text"] {border:1px solid #cccccc; padding:6px;}
 
 .span6 {width:60%;}
 
-.left {float:left;}
+.left {float:left;margin-top: 10px;}
 .right {float:right;}
 
 
@@ -108,6 +108,7 @@ input[type="text"] {border:1px solid #cccccc; padding:6px;}
 .dropDown, .moremenu{ display: inline; position: relative;}
 
 .ddMenu{position:absolute; left: 0; list-style-type: none;}
+.settingmenu .ddMenu{ left: auto; right: 0px;}
 .ddMenu{z-index:9}
 .ddMenu li{border-bottom:1px solid #666; border-top:1px solid #292929; float:none; padding:2px 0}
 .ddMenu li:last-child{border-bottom:none}
