--- a/css/style.css
+++ b/css/style.css
@@ -192,7 +192,7 @@ span#recaptcha_privacy {
 .span6 {width:auto; clear:both;}
 .footer > span {display:block; margin-top:5px; text-align:center;
 }
-
+}
 @media (max-width:380px) {
 
 .span6 {display:block; width:80%; margin:10px;}
@@ -206,8 +206,4 @@ span#recaptcha_privacy {
 input[type="password"] {border:1px solid #cccccc; padding:10px;}
 
 
-
-
-
-
-
+.lurl{ padding-top: 20px;}
