--- a/css/style.css
+++ b/css/style.css
@@ -207,3 +207,4 @@ input[type="password"] {border:1px solid #cccccc; padding:10px;}
 
 
 .lurl{ padding-top: 20px;}
+.settingmenu .dropDown {padding-right: 0;}
