--- a/css/adminstyle.css
+++ b/css/adminstyle.css
@@ -648,3 +648,4 @@ div.share {min-height: 180px;}
 
 .doglogo {float: left; margin: -7px 5px 0 5px;}
 .fix_images {margin:1px 5px; float: left;}
+.margin7_T {margin-top: 7px;}
