--- a/css/adminstyle.css
+++ b/css/adminstyle.css
@@ -6,7 +6,11 @@ min-height:150px;
 margin:0 auto 20px auto;
 padding:10px;
 background:#fff;
+height:100%;
 }
+
+body, html, .contentarea, .ltpannel{ height: 100%;}
+
 .login #wrap {
 background:none;
 border:none;
@@ -193,22 +197,20 @@ background:#efe;
 }
 #login {
 border:0;
-margin:100px auto 0;
+margin:20px auto 0;
 padding:0;
-width:560px;
-background:#f0f0f0 url(../images/login-logo.png) no-repeat 25px 115px;
+width:450px;
+/*background:#f0f0f0 url(../images/login-logo.png) no-repeat 25px 115px;
 overflow:hidden;
-min-height:370px;
-color:#5d5e5f;
+min-height:370px;*/
+color:#000;
 }
 #login p {
 font-weight:bold;
 margin:0 0 15px;
 padding:0;
 }
-#login label {
-display:block;
-padding-bottom:5px;
+#login label {float:left; width:25%; margin-top:8px; padding-bottom:5px;
 }
 .logintitle {
 background:#61acc5;
@@ -220,16 +222,16 @@ color:#fff;
 margin:0;
 }
 #login form {
-float:right;
+/*float:right;
 width:270px;
-margin-right:30px;
-margin-top:70px;
+margin-right:30px;*/
+margin-top:30px; text-align: left;
 }
 #login .text {
 width:92%;
 font-family: 'Source Sans Pro', sans-serif;
 font-size:13px;
-background:#ddd;
+
 }
 #login ul {
 padding-left:0px;
@@ -518,7 +520,7 @@ input[type="text"] {border:1px solid #cccccc; padding:6px;}
 .clear {clear:both; display:block; overflow: hidden;}
 
 #login {
-    margin: 100px auto 0;
+    margin:20px auto 0;
    /* width: 300px;*/
 }
 #login p {
@@ -534,7 +536,7 @@ input[type="text"] {border:1px solid #cccccc; padding:6px;}
 
 #login .text{
     border: 1px solid #CCCCCC;
-    padding: 10px; width:92%;}
+    padding: 10px; width:65%;}
 
 .login{ background: url("../images/bgTexture.png") repeat scroll 0 0 rgba(0, 0, 0, 0);}
 
@@ -649,3 +651,14 @@ div.share {min-height: 180px;}
 .doglogo {float: left; margin: -7px 5px 0 5px;}
 .fix_images {margin:1px 5px; float: left;}
 .margin7_T {margin-top: 7px;}
+
+
+.homecontent {display: table; height:80%; width: 100%;}
+.homeinner {width:100%;
+    height:100%;
+    display: table-cell;
+    text-align: center;
+    float: none; 
+    vertical-align: middle;
+}
+
